--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <meta name="author" content="">
     <title>jQuery és AngularJj</title>
     <link rel="shortcut icon" href="">
+<!--
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <style>body{padding-top:50px;}.starter-template{padding:40px 15px;text-align:center;}</style>
+-->
+    <style>
+        body{
+            padding-top:50px;
+        }
+        .starter-template{
+            padding:40px 15px;
+            text-align:center;
+        }
+    </style>
 
     <!--[if IE]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -18,6 +28,7 @@
 </head>
 
 <body>
+<!--
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -36,9 +47,10 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
-            </div><!--.nav-collapse -->
+            </div>.nav-collapse 
         </div>
     </nav>
+-->
 
     <div class="container">
         <div class="starter-template">
@@ -52,7 +64,7 @@
                       <div class="form-group">
                         <label for="username" class="col-sm-4 control-label">Felhasználó</label>
                         <div class="col-sm-8">
-                          <input name="username" accept=""type="text" class="form-control" id="username" placeholder="Felhasználó">
+                          <input name="username" type="text" class="form-control" id="username" placeholder="Felhasználó">
                         </div>
                       </div>
                        
